--- a/iafas/src/main/webapp/mainPrincipal.xhtml
+++ b/iafas/src/main/webapp/mainPrincipal.xhtml
@@ -7,12 +7,10 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>SISTEMA INTEGRADO IAFAS</title>
-<!-- 	<link href="css/default.css" rel="stylesheet" type="text/css" /> -->
     <link href="css/tableLayout.css" rel="stylesheet" type="text/css" />
-<!--     <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
-<!--     <link rel="stylesheet" href="css/style.css" /> -->
+    <link href="css/bootstrap.css" rel="stylesheet" /> 
     <style type="text/css">
-    button.ui-button {
+	    button.ui-button {
         margin-right: .5rem;
     }
 </style>
@@ -35,7 +33,7 @@
 						style="color:black;font-weight:bold;font-size:12px;"></h:outputText>
 						<h:outputText />
 				<h:commandLink action="login.xhtml" actionListener="#{iafasUsuariosMenuController.cerraSession()}"  >
-					<h:graphicImage value="img/icono-cerrar-sesion-png-6.png" style="font-size:14px; height:40px;" title="Cerrar Session" /> 
+					<h:graphicImage value="img/icono-cerrar-sesion-png-6.png" style="font-size:15px; height:30px;" title="Cerrar Session" /> 
 				  </h:commandLink>	
 				</h:panelGrid></td>
 		</tr>
