--- a/iafas/src/main/webapp/mainCompromisoMensual.xhtml
+++ b/iafas/src/main/webapp/mainCompromisoMensual.xhtml
@@ -17,7 +17,7 @@
                       
         
         </script>
-        <h:form id="frmCompromisoMensual" style="border-radius: 5px 5px 5px 5px;border: 1px ; width:1020px;">
+        <h:form id="frmCompromisoMensual" style="border-radius: 5px 5px 5px 5px;border: 1px ; width:100%;">
             <p:panel >
                 <p:panelGrid columns="2" styleClass="panel">
                    <i class="pi pi-calendar-plus" style="height:20px;height:20px;" ></i>
