Cambios de Giro

--- a/iafas/src/main/webapp/mainPrincipal.xhtml
+++ b/iafas/src/main/webapp/mainPrincipal.xhtml
@@ -8,7 +8,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>SISTEMA INTEGRADO IAFAS</title>
     <link href="css/tableLayout.css" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.css" rel="stylesheet" /> 
+    <link href="css/bootstrap.css" rel="stylesheet" />
+    <link href="css/Redes.css" rel="stylesheet" />  
     <style type="text/css">
 	    button.ui-button {
         margin-right: .5rem;
@@ -62,7 +63,21 @@
 			</td>
 			 
 		</tr>
+		
+		<tr >
+				<td >
+<!-- 				<div id="redessociales"> -->
+<!-- 						<a class="smedia facebook" href="https://www.facebook.com/">Uno</a> -->
+<!-- 						<a class="smedia twitter" href="https://www.twitter.com/">Dos</a> -->
+<!-- 						<a class="smedia instagram" href="#">Tres</a>  -->
+<!-- 						<a class="smedia youtube" href="#">Cuatro</a>  -->
+<!-- 						<a class="smedia vimeo" href="#">Cinco</a>  -->
+<!-- 						<a class="smedia email" href="#">Seis</a> -->
+<!-- 					</div> -->
+					
+				</td>
 
+			</tr>
 	</table>
 </h:form>
 </body>
