cambio en la consulta de movimientos en el anual

--- a/iafas/src/main/webapp/mainCompromisoAnual.xhtml
+++ b/iafas/src/main/webapp/mainCompromisoAnual.xhtml
@@ -149,7 +149,7 @@
                     </tr>
                 </table>
                 <br/>
-                <p:tabView>
+                <p:tabView id="tabViewDetalle" dynamic="true" cache="false">
                 <p:tab title="Detalle de Registro">
                  <h:panelGrid columns="6" style="font-weight: bold; font-size: 11px; width: 100%" styleClass="panel">
                             <p:outputLabel value="Secuencia :"/>
