Cambios de Programacion

--- a/iafas/src/main/webapp/mainIafasGirado.xhtml
+++ b/iafas/src/main/webapp/mainIafasGirado.xhtml
@@ -23,6 +23,60 @@
 </h:head>
 
 <body class="formulario">
+
+<div class="theme-loader">
+<div class="loader-track">
+            <div class="preloader-wrapper">
+                <div class="spinner-layer spinner-blue">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+                <div class="spinner-layer spinner-red">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+
+                <div class="spinner-layer spinner-yellow">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+
+                <div class="spinner-layer spinner-green">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+
  <script>
             function limpiarTexto() {
                 document.getElementById('frm_Girado:inptxtExpediente').value = "";
@@ -178,7 +232,18 @@
 	</h:form>
 	
 	
-	
+ <script type="text/javascript" src="material_able-main/assets/js/jquery/jquery.min.js "></script>
+    <script type="text/javascript" src="material_able-main/assets/js/jquery-ui/jquery-ui.min.js "></script>
+    <script type="text/javascript" src="material_able-main/assets/js/popper.js/popper.min.js"></script>
+    <script type="text/javascript" src="material_able-main/assets/js/bootstrap/js/bootstrap.min.js "></script>
+    <!-- waves js -->
+    <script src="material_able-main/assets/pages/waves/js/waves.min.js"></script>
+    <!-- jquery slimscroll js -->
+    <script type="text/javascript" src="material_able-main/assets/js/jquery-slimscroll/jquery.slimscroll.js"></script>
+
+    <!-- slimscroll js -->
+    <script src="material_able-main/assets/js/jquery.mCustomScrollbar.concat.min.js "></script>
+    <script type="text/javascript" src="material_able-main/assets/js/script.js "></script>	
 </body>
   
 </html>
