--- a/iafas/src/main/webapp/insRegCompMensual.xhtml
+++ b/iafas/src/main/webapp/insRegCompMensual.xhtml
@@ -10,9 +10,32 @@
         <title>IAFAS</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css" />
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>	
     </h:head>
-    <body class="formulario">
-        <script>           
+    <h:body class="formulario">
+        <script >  
+            
+      function verMensajes(){
+    	  var tipo = '#{mbCompMensual.typeMessages}';
+    	  alert("Tipo : "+tipo);
+           if(tipo==0){
+        	   alert("Entro 0");
+             swal("ERROR", 'Ocurrio Un Error al Registrar',"error");
+           }else
+           if(tipo==1) {
+        	   alert("Entro 1");
+           	 swal("Aviso", 'Se Registró Con Exito',"success").then(function() {
+    	     window.location = "mainCompromisoMensual.xhtml"; });
+           }else
+        	if(tipo==2){
+        		alert("Entro 2")
+        		   swal("ALERTA", 'No se permite Campos Vacios al Registrar',"info");        		   
+        	   }
+		  else{ alert("Entro 3");
+			  swal("Info", 'Debe ingresar el Certificado a Mensualizar',"info");  
+		  }
+		  
+        }
         </script>
         <h:form id="frmCompromisoMensual" style="border-radius: 5px 5px 5px 5px;border: 1px; width:1020px;">
         <p:messages id="mensaje" showDetail="true" autoUpdate="true" closable="true" globalOnly="true"/>
@@ -25,9 +48,10 @@
                     <p:outputLabel value="N° Certificado :" styleClass="etiqueta"/>
                     <h:inputText id="inpTxtCertificado" value="#{mbCompMensual.certificado}" 
                     onclick="limpiarTexto();" styleClass="input" style="text-align:right;"/>
-                    <p:commandButton id="cmdBtnBuscar"  value="Ver" actionListener="#{mbCompMensual.verAnuales()}"
-                     style="height:30px;" oncomplete="PF('dialogCA').show();"
-                     update="frmCompromisoMensual:dCompAnual" icon="pi pi-plus"
+                    <p:commandButton id="cmdBtnBuscar"  value="Ver" actionListener="#{mbCompMensual.verAnuales()}"                  
+                     style="height:30px;" ajax="true" update="frmCompromisoMensual:dCompAnual"
+                     oncomplete="PF('dialogCA').show();"
+                      icon="pi pi-plus"
                      title="Click aqui para buscar datos del Certificado Anual"/>
                     <p:commandButton  value="Grabar" action="#{mbCompMensual.registroCompMensual()}" 
                     icon="pi pi-save" style="height:30px;" ajax="false"/>
@@ -90,8 +114,8 @@
                    </h:panelGrid>
                    <h:panelGrid columns="2" style="width:100%">
                     <p:outputLabel value="Glosa:"/>
-                    <p:inputTextarea id="inpTxtGlosa" value="#{mbCompMensual.glosa}" cols="1" rows="2"
-                    style="width:550px;"></p:inputTextarea>
+                    <h:inputTextarea id="inpTxtGlosa" value="#{mbCompMensual.glosa}" cols="1" rows="2"
+                    style="width:850px;" styleClass="input"></h:inputTextarea>
                    </h:panelGrid>
                 </p:fieldset>
                 <br/>
@@ -173,5 +197,5 @@
                 </p:dialog>
             </p:panel>
         </h:form>
-    </body>
+    </h:body>
 </html>
