Cambios para obetner la  Respuesta de la BD

--- a/iafas/src/main/webapp/mainIafasUsuarios.xhtml
+++ b/iafas/src/main/webapp/mainIafasUsuarios.xhtml
@@ -115,6 +115,7 @@
 					<p:commandButton value="Grabar" styleClass="ui-button-outlined ui-button-success" oncomplete="PF('modalUsuario').hide()" 
 						action="#{iafasUsuariosController.mantenimientoUsuarios()}" update="frm_Usuarios:dTableUsuarios" />
 				</f:facet>
+				<p:outputLabel value="#{iafasUsuariosController.msgErr}" />
 		</p:dialog>
 		
 		 <p:dialog id="Deleteusuario" widgetVar="Deleteusuario" modal="true" header="Confirmar Eliminación"
